<resources>
    <string name="app_name">AppLaunchTask</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="enter_username">User name</string>
    <string name="enter_password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="add">Add</string>
    <string name="enter_email">Email</string>
    <string name="enter_lastname">Last name</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="temp">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="weather_type">Weather Type</string>
    <string name="wind_speed">Wind Speed</string>
</resources>